Salvando as alterações do dia 08/05/2025

--- a/social/index.html
+++ b/social/index.html
@@ -25,7 +25,79 @@
         </div>
     </div>
 
-    <div class="">
+    <div class="conteinerconversas">
+
+        <div class="amigosclubes">
+
+            <button>
+                <img src="foto.jpg">
+                <p>Juliana Morais</p>
+            </button>
+
+            <button>
+                <img src="foto.jpg">
+                <p>Juliana Morais</p>
+            </button>
+
+            <button>
+                <img src="foto.jpg">
+                <p>Juliana Morais</p>
+            </button>
+
+            <button>
+                <img src="foto.jpg">
+                <p>Juliana Morais</p>
+            </button>
+
+        </div>
+
+        <div class="amigosclubes">
+
+            <button>
+                <img src="foto.jpg">
+                <p>Clube</p>
+            </button>
+
+            <button>
+                <img src="foto.jpg">
+                <p>Clube</p>
+            </button>
+
+            <button>
+                <img src="foto.jpg">
+                <p>Clube</p>
+            </button>
+
+        </div>
+
+        <div class="conversasrecentes">
+
+            <button>
+                <img src="foto.jpg">
+                <p>aqui fica as mensagens recentes</p>
+            </button>
+
+            <button>
+                <img src="foto.jpg">
+                <p>aqui fica as mensagens recentes</p>
+            </button>
+
+            <button>
+                <img src="foto.jpg">
+                <p>aqui fica as mensagens recentes</p>
+            </button>
+
+            <button>
+                <img src="foto.jpg">
+                <p>aqui fica as mensagens recentes</p>
+            </button>
+
+            <button>
+                <img src="foto.jpg">
+                <p>aqui fica as mensagens recentes</p>
+            </button>
+
+        </div>
 
     </div>
     
