Barra de rolagem

--- a/social/index.html
+++ b/social/index.html
@@ -49,6 +49,26 @@
                 <p>Juliana Morais</p>
             </button>
 
+            <button>
+                <img src="foto.jpg">
+                <p>Juliana Morais</p>
+            </button>
+
+            <button>
+                <img src="foto.jpg">
+                <p>Juliana Morais</p>
+            </button>
+
+            <button>
+                <img src="foto.jpg">
+                <p>Juliana Morais</p>
+            </button>
+
+            <button>
+                <img src="foto.jpg">
+                <p>Juliana Morais</p>
+            </button>
+
         </div>
 
         <div class="amigosclubes">
